--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./main.css">
+    <link rel="stylesheet" href="./main.css" />
     <title>Happy Halloween | Dyn</title>
   </head>
   <body>
@@ -18,5 +18,6 @@
         <span></span><span></span><span></span><span></span>
       </div>
     </div>
+    <h1>Halloween vui nha!!!</h1>
   </body>
 </html>
